--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -320,6 +320,8 @@
       <li><a href="/admin/languages"><i class="fas fa-globe"></i> Languages</a></li>
       <li><a href="/admin/products"><i class="fas fa-book"></i> Products</a></li>
       <li><a href="/admin/orders" class="active"><i class="fas fa-shopping-cart"></i> Orders</a></li>
+      <li><a href="/admin/transactions" class="active"><i class="fas fa-wallet"></i> Wallet</a></li>
+
       <li><a href="/admin/products-add"><i class="fas fa-plus-circle"></i> Add Product</a></li>
       <li><a href="/admin/coupons" class="active"><i class="fas fa-ticket-alt"></i> Coupons</a></li>
       <li><a href="/admin/banners" class="active"><i class="fas fa-images"></i> Banners</a></li>
@@ -362,7 +364,7 @@
           <tr>
             <td><%= order.orderId %></td>
             <td><%= order.createdAt.toLocaleDateString() %></td>
-            <td><%= order.userId.name %> (<%= order.userId.email %>)</td>
+            <td><%= order.userId ? `${order.userId.name} (${order.userId.email})` : 'Unknown User' %></td>
             <td>
               <% if (order.status === 'Cancelled' || order.status === 'Returned') { %>
                 <span><%= order.status %></span> <!-- No dropdown for final states -->
