--- a/views/admin/products-add.ejs
+++ b/views/admin/products-add.ejs
@@ -346,7 +346,9 @@
         <li><a href="/admin/categories"><i class="fas fa-tags"></i> Categories</a></li>
         <li><a href="/admin/languages"><i class="fas fa-globe"></i> Languages</a></li>
         <li><a href="/admin/products"><i class="fas fa-book"></i> Products</a></li>
-        <li><a href="/admin/orders" class="active"><i class="fas fa-shopping-cart"></i> Orders</a></li>
+        <li><a href="/admin/orders" class="active"><i class="fas fa-shopping-cart"></i> Orders</a></li>          
+        <li><a href="/admin/transactions" class="active"><i class="fas fa-wallet"></i> Wallet</a></li>
+
         <li><a href="/admin/products-add"><i class="fas fa-plus-circle"></i> Add Product</a></li>
         <li><a href="/admin/coupons" class="active"><i class="fas fa-ticket-alt"></i> Coupons</a></li>
         <li><a href="/admin/banners" class="active"><i class="fas fa-images"></i> Banners</a></li>
@@ -654,8 +656,8 @@
           showPopup(data.message || 'Failed to add product.');
         }
       } catch (error) {
-        console.error('Fetch error:', error);
-        showPopup('Error: ' + error.message);
+        const message = error?.response?.data?.message || "only images are allowed";
+        alert(`❌ ${message}`);
       }
     });
 
